       of more than one item. With this, the user can
       now select two files/folders from different
       urls (e.g. trunk and tags) and request a diff
       from them. (Stefan)
- ADD: Implement a "Delete" command in the context menu of 
       the commit dialog for unversioned files. (Stefan)
- ADD: TortoiseMerge can now handle UTF8 files. (Stefan)
- CHG: The log message editboxes now do "soft-wrap",
       i.e. the logmessage is wrapped at the right
       end of the dialog box. (Stefan)
- CHG: "Show unversioned files before committing" is now
       enabled by default. (Stefan)
- BUG: In TME it was not possible to select a diff block
       completely if it started at the first line. (Stefan)
- BUG: Creating a branch/tag from a modified working
       copy did not include the changes from the
       working copy! (Stefan)
- BUG: In the Commit and the Add dialog: if a file was
       selected then only the topmost parentfolder was
       automatically selected instead of all intermediant
       parentfolders. (Stefan)
- BUG: Export always used HEAD, even if another revision
       was specified in the dialog. (Stefan)
- BUG: Showing diffs for changed files from the list in
       the log dialog was done with the wrong revisions. (Stefan)
- BUG: When adding files in a directory with svn:externals
       in it already controlled files got shown in
       the add dialog. (Stefan)
- BUG: Some patchfiles were not parsed correctly. (Stefan)
- BUG: Fixed a massive memory leak when showing logs,
       also reduced memory consumption when 
       committing. (Stefan)
- BUG: If the config file was messed up with TSVN just
       crashed instead of showing the error and exit. (Stefan)
- BUG: When sorting by a column in the commit dialog
       the selections (checkboxes) got lost. (Stefan)
- BUG: When the recursive overlay was activated, the
       overlays for folders weren't shown recursive if
       the explorer columns weren't sorted by name. (Stefan)
