@@ -27,6 +27,6 @@ public:
 	~CRightView(void);
 protected:
 	void	OnContextMenu(CPoint point, int nLine);
-	BOOL	IsStateSelectable(CDiffData::DiffStates state);
+	BOOL	ShallShowContextMenu(CDiffData::DiffStates state, int nLine);
 	
 };
